src/inspect/snapshots/_oxitest__inspect__ui__snapshot_tests__footer_search_mode.snap
---
source: src/inspect/ui.rs
expression: "render_to_string(&app, 80, 4)"
---
"┌ Home ────────────────────────────┐┌ Detail ──────────────────────────────────┐"
"│No data loaded                    ││No data loaded                            │"
"└──────────────────────────────────┘└──────────────────────────────────────────┘"
" /  Esc Cancel  Enter Accept  ↑/↓ Navigate                                      "
