src/inspect/snapshots/_oxitest__inspect__ui__snapshot_tests__help_overlay_visible.snap
---
source: src/inspect/ui.rs
expression: "render_to_string(&app, 120, 24)"
---
" ○ overview                                                                                                             "
"┌────────────────────────────────────────────────────────────────┐┌ Preview ───────────────────────────────────────────┐"
"│No data loaded                                                  ││No data loaded                                      │"
"│                                       ┌ Help ────────────────────────────────┐                                       │"
"│                                       │ Keybindings                          │                                       │"
"│                                       │                                      │                                       │"
"│                                       │ q / Esc     Quit                     │                                       │"
"│                                       │ j / Down    Move down                │                                       │"
"│                                       │ k / Up      Move up                  │                                       │"
"│                                       │ Enter / l   Navigate into            │                                       │"
"│                                       │ h / Left    Back                     │                                       │"
"│                                       │ H           History                  │                                       │"
"│                                       │ Backspace   Back                     │                                       │"
"│                                       │ /           Search                   │                                       │"
"│                                       │ ?           Toggle this help         │                                       │"
"│                                       │ r           Refresh data             │                                       │"
"│                                       │ s           Toggle source view       │                                       │"
"│                                       │                                      │                                       │"
"│                                       │ Press ? to close                     │                                       │"
"│                                       └──────────────────────────────────────┘                                       │"
"│                                                                ││                                                    │"
"│                                                                ││                                                    │"
"└────────────────────────────────────────────────────────────────┘└────────────────────────────────────────────────────┘"
" q Quit  / Search  ? Help  j/k Navigate  l Enter  h Back  H History                                                     "
