src/inspect/snapshots/_oxitest__inspect__ui__snapshot_tests__history_screen_empty.snap
---
source: src/inspect/ui.rs
expression: "render_to_string(&app, 120, 24)"
---
"┌ History ───────────────────────────────────┐┌ Detail ────────────────────────────────────────────────────────────────┐"
"│ No history yet                             ││Select a node to view details                                           │"
"│                                            ││                                                                        │"
"│                                            ││                                                                        │"
"│                                            ││                                                                        │"
"│                                            ││                                                                        │"
"│                                            ││                                                                        │"
"│                                            ││                                                                        │"
"│                                            ││                                                                        │"
"│                                            ││                                                                        │"
"│                                            ││                                                                        │"
"│                                            ││                                                                        │"
"│                                            ││                                                                        │"
"│                                            ││                                                                        │"
"│                                            ││                                                                        │"
"│                                            ││                                                                        │"
"│                                            ││                                                                        │"
"│                                            ││                                                                        │"
"│                                            ││                                                                        │"
"│                                            ││                                                                        │"
"│                                            ││                                                                        │"
"│                                            ││                                                                        │"
"└────────────────────────────────────────────┘└────────────────────────────────────────────────────────────────────────┘"
" q Quit  / Search  ? Help  j/k Navigate  l Enter  h History                                                             "
