src/inspect/snapshots/_oxitest__inspect__ui__snapshot_tests__history_screen_with_entries.snap
---
source: src/inspect/ui.rs
expression: "render_to_string(&app, 120, 24)"
---
" ○ overview                                                                                                             "
"┌────────────────────────────────────────────────────────────────┐┌ Preview ───────────────────────────────────────────┐"
"│ T  tests/test_auth.py::test_login                              ││T tests/test_auth.py::test_login                    │"
"│ T  tests/test_auth.py::test_logout                             ││                                                    │"
"│ M  slow                                                        ││  async: no                                         │"
"│                                                                ││                                                    │"
"│                                                                ││                                                    │"
"│                                                                ││                                                    │"
"│                                                                ││                                                    │"
"│                                                                ││                                                    │"
"│                                                                ││                                                    │"
"│                                                                ││                                                    │"
"│                                                                ││                                                    │"
"│                                                                ││                                                    │"
"│                                                                ││                                                    │"
"│                                                                ││                                                    │"
"│                                                                ││                                                    │"
"│                                                                ││                                                    │"
"│                                                                ││                                                    │"
"│                                                                ││                                                    │"
"│                                                                ││                                                    │"
"│                                                                ││                                                    │"
"└────────────────────────────────────────────────────────────────┘└────────────────────────────────────────────────────┘"
" q Quit  / Search  ? Help  j/k Navigate  l Enter  h Back  H History                                                     "
