src/inspect/snapshots/_oxitest__inspect__ui__snapshot_tests__home_screen_with_graph.snap
---
source: src/inspect/ui.rs
expression: "render_to_string(&app, 80, 12)"
---
"┌ Home ────────────────────────────┐┌ Detail ──────────────────────────────────┐"
"│ T  Tests (3)                     ││oxitest inspect                           │"
"│ M  Marks (1)                     ││                                          │"
"│                                  ││                                          │"
"│                                  ││                                          │"
"│                                  ││                                          │"
"│                                  ││                                          │"
"│                                  ││                                          │"
"│                                  ││                                          │"
"│                                  ││                                          │"
"└──────────────────────────────────┘└──────────────────────────────────────────┘"
" q Quit  / Search  ? Help  j/k Navigate  l Enter  h Back                        "
