src/inspect/snapshots/_oxitest__inspect__ui__snapshot_tests__narrow_layout_adjusted_split.snap
---
source: src/inspect/ui.rs
expression: "render_to_string(&app, 90, 24)"
---
"┌ Tree ─────────────────────────────────┐┌ Detail ───────────────────────────────────────┐"
"│No data loaded                         ││oxitest inspect                                │"
"│                                       ││                                               │"
"│                                       ││                                               │"
"│                                       ││                                               │"
"│                                       ││                                               │"
"│                                       ││                                               │"
"│                                       ││                                               │"
"│                                       ││                                               │"
"│                                       ││                                               │"
"│                                       ││                                               │"
"│                                       ││                                               │"
"│                                       ││                                               │"
"│                                       ││                                               │"
"│                                       ││                                               │"
"│                                       ││                                               │"
"│                                       ││                                               │"
"│                                       ││                                               │"
"│                                       ││                                               │"
"│                                       ││                                               │"
"│                                       ││                                               │"
"│                                       ││                                               │"
"└───────────────────────────────────────┘└───────────────────────────────────────────────┘"
" q Quit  / Search  ? Help  j/k Navigate  l Enter  h Back                                  "
