src/inspect/snapshots/_oxitest__inspect__ui__snapshot_tests__node_focus.snap
---
source: src/inspect/ui.rs
expression: "render_to_string(&app, 80, 12)"
---
" ○ overview › T tests/test_auth.py::test_login                                  "
"┌──────────────────────────────────────────┐┌ Preview ─────────────────────────┐"
"│T tests/test_auth.py::test_login          ││T tests/test_auth.py::test_login  │"
"│                                          ││                                  │"
"│  async: no                               ││  async: no                       │"
"│                                          ││                                  │"
"│                                          ││                                  │"
"│                                          ││                                  │"
"│                                          ││                                  │"
"│                                          ││                                  │"
"└──────────────────────────────────────────┘└──────────────────────────────────┘"
" q Quit  / Search  ? Help  j/k Navigate  l Enter  h Back  H History  s Source  e"
