src/inspect/snapshots/_oxitest__inspect__ui__snapshot_tests__node_list_parametrized_collapsed.snap
---
source: src/inspect/ui.rs
expression: "render_to_string(&app, 80, 12)"
---
"┌ Tests ───────────────────────────┐┌ Detail ──────────────────────────────────┐"
"│ T  tests/test_math.py::test_add (││T tests/test_math.py::test_add            │"
"│                                  ││                                          │"
"│                                  ││  variants: 3                             │"
"│                                  ││  async: no                               │"
"│                                  ││                                          │"
"│                                  ││                                          │"
"│                                  ││                                          │"
"│                                  ││                                          │"
"│                                  ││                                          │"
"└──────────────────────────────────┘└──────────────────────────────────────────┘"
" q Quit  / Search  ? Help  j/k Navigate  l Enter  h Back                        "
